Fixed checkout and order history.